@@ -43,6 +43,32 @@ import|;
 end_import
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicInteger
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicLong
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -129,9 +155,37 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|NamedList
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|core
 operator|.
 name|SolrCore
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|SolrEventListener
 import|;
 end_import
 begin_import
@@ -158,6 +212,19 @@ operator|.
 name|request
 operator|.
 name|SolrQueryRequest
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|SolrIndexSearcher
 import|;
 end_import
 begin_import
@@ -1819,6 +1886,241 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testPostSoftCommitEvents
+specifier|public
+name|void
+name|testPostSoftCommitEvents
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrCore
+name|core
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+decl_stmt|;
+assert|assert
+name|core
+operator|!=
+literal|null
+assert|;
+name|DirectUpdateHandler2
+name|updater
+init|=
+operator|(
+name|DirectUpdateHandler2
+operator|)
+name|core
+operator|.
+name|getUpdateHandler
+argument_list|()
+decl_stmt|;
+name|MySolrEventListener
+name|listener
+init|=
+operator|new
+name|MySolrEventListener
+argument_list|()
+decl_stmt|;
+name|core
+operator|.
+name|registerNewSearcherListener
+argument_list|(
+name|listener
+argument_list|)
+expr_stmt|;
+name|updater
+operator|.
+name|registerSoftCommitCallback
+argument_list|(
+name|listener
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"999"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|(
+literal|"softCommit"
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"newSearcher was called more than once"
+argument_list|,
+literal|1
+argument_list|,
+name|listener
+operator|.
+name|newSearcherCount
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"postSoftCommit was not called"
+argument_list|,
+name|listener
+operator|.
+name|postSoftCommitAt
+operator|.
+name|get
+argument_list|()
+operator|==
+name|Long
+operator|.
+name|MAX_VALUE
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"newSearcher was called after postSoftCommitCallback"
+argument_list|,
+name|listener
+operator|.
+name|postSoftCommitAt
+operator|.
+name|get
+argument_list|()
+operator|>=
+name|listener
+operator|.
+name|newSearcherOpenedAt
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|class|MySolrEventListener
+specifier|static
+class|class
+name|MySolrEventListener
+implements|implements
+name|SolrEventListener
+block|{
+DECL|field|newSearcherCount
+name|AtomicInteger
+name|newSearcherCount
+init|=
+operator|new
+name|AtomicInteger
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+DECL|field|newSearcherOpenedAt
+name|AtomicLong
+name|newSearcherOpenedAt
+init|=
+operator|new
+name|AtomicLong
+argument_list|(
+name|Long
+operator|.
+name|MAX_VALUE
+argument_list|)
+decl_stmt|;
+DECL|field|postSoftCommitAt
+name|AtomicLong
+name|postSoftCommitAt
+init|=
+operator|new
+name|AtomicLong
+argument_list|(
+name|Long
+operator|.
+name|MAX_VALUE
+argument_list|)
+decl_stmt|;
+annotation|@
+name|Override
+DECL|method|postCommit
+specifier|public
+name|void
+name|postCommit
+parameter_list|()
+block|{     }
+annotation|@
+name|Override
+DECL|method|postSoftCommit
+specifier|public
+name|void
+name|postSoftCommit
+parameter_list|()
+block|{
+name|postSoftCommitAt
+operator|.
+name|set
+argument_list|(
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|newSearcher
+specifier|public
+name|void
+name|newSearcher
+parameter_list|(
+name|SolrIndexSearcher
+name|newSearcher
+parameter_list|,
+name|SolrIndexSearcher
+name|currentSearcher
+parameter_list|)
+block|{
+name|newSearcherCount
+operator|.
+name|incrementAndGet
+argument_list|()
+expr_stmt|;
+name|newSearcherOpenedAt
+operator|.
+name|set
+argument_list|(
+name|newSearcher
+operator|.
+name|getOpenTime
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|init
+specifier|public
+name|void
+name|init
+parameter_list|(
+name|NamedList
+name|args
+parameter_list|)
+block|{      }
 block|}
 block|}
 end_class
